third_party/move/move-compiler-v2/tests/checking/typing/v1-commands/pop_negative.exp

Diagnostics:
error: expected 3 item(s), found 4
  ┌─ tests/checking/typing/v1-commands/pop_negative.move:7:9
  │
7 │         (_, _, _, _) = three();
  │         ^^^^^^^^^^^^
